@@ -1,6 +1,3 @@
 @call "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars64.bat"
-native-image --verbose -O3 -jar target\kay-1.0-jar-with-dependencies.jar -o kay ^
--H:+ReportExceptionStackTraces --no-fallback ^
---initialize-at-run-time=io.netty.channel.epoll.Epoll,io.netty.channel.epoll.Native,^
-io.netty.channel.unix.Errors
+native-image --enable-preview --verbose -O3 -jar target\kay-1.0-jar-with-dependencies.jar -o kay -H:+ReportExceptionStackTraces --allow-incomplete-classpath --no-fallback --initialize-at-run-time=io.netty.resolver.dns.DnsNameResolver,io.netty.resolver.HostsFileEntriesResolver,io.netty.resolver.dns.DefaultDnsServerAddressStreamProvider,io.netty.resolver.dns.DnsServerAddressStreamProviders$DefaultProviderHolder,io.netty.channel.epoll.Epoll,io.netty.channel.epoll.Native,io.netty.channel.unix.Errors --initialize-at-build-time=io.netty
 @pause
