@@ -57,6 +57,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.graalvm.nativeimage</groupId>
+            <artifactId>svm</artifactId>
+            <version>22.3.0</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -74,6 +81,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <argLine>--add-opens java.base/sun.net.dns=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
@@ -94,9 +104,12 @@
                     <source>19</source>
                     <target>19</target>
                     <compilerArgs>
-                        --enable-preview
+                        <arg>--enable-preview</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.net.dns=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
+                <version>3.10.1</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -126,33 +139,33 @@
         </plugins>
     </build>
 
-    <repositories>
-        <!--repository>
-            <id>repository.spring.release</id>
-            <name>Spring GA Repository</name>
-            <url>http://repo.spring.io/release</url>
-        </repository-->
-        <repository>
-            <id>repository.spring.milestone</id>
-            <url>https://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>central</id>
-            <url>https://maven.aliyun.com/repository/central</url>
-        </repository>
+<!--    <repositories>-->
+<!--        &lt;!&ndash;repository>-->
+<!--            <id>repository.spring.release</id>-->
+<!--            <name>Spring GA Repository</name>-->
+<!--            <url>http://repo.spring.io/release</url>-->
+<!--        </repository&ndash;&gt;-->
+<!--        <repository>-->
+<!--            <id>central</id>-->
+<!--            <url>https://maven.aliyun.com/repository/central</url>-->
+<!--        </repository>-->
+<!--        <repository>-->
+<!--            <id>repository.spring.milestone</id>-->
+<!--            <url>https://repo.spring.io/milestone</url>-->
+<!--            <snapshots>-->
+<!--                <enabled>false</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
 
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>central-plugin</id>
-            <url>https://maven.aliyun.com/repository/central</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>spring-plugin</id>
-            <url>https://maven.aliyun.com/repository/spring-plugin</url>
-        </pluginRepository>
-    </pluginRepositories>
+<!--    </repositories>-->
+<!--    <pluginRepositories>-->
+<!--        <pluginRepository>-->
+<!--            <id>central-plugin</id>-->
+<!--            <url>https://maven.aliyun.com/repository/central</url>-->
+<!--        </pluginRepository>-->
+<!--        <pluginRepository>-->
+<!--            <id>spring-plugin</id>-->
+<!--            <url>https://maven.aliyun.com/repository/spring-plugin</url>-->
+<!--        </pluginRepository>-->
+<!--    </pluginRepositories>-->
 </project>
